--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "multer": "^1.4.2",
     "nprogress": "^0.2.0",
     "vue": "^2.6.11",
+    "vue-lazyload": "^1.3.3",
     "vue-resource": "^1.5.1",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
