--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "echarts": "^4.8.0",
     "element-ui": "^2.13.2",
     "eslint-plugin-vue": "^6.2.2",
+    "github-markdown-css": "^4.0.0",
+    "markdown-it": "^12.0.2",
+    "mavon-editor": "^2.9.0",
     "multer": "^1.4.2",
     "nprogress": "^0.2.0",
     "vue": "^2.6.11",
@@ -41,6 +44,7 @@
     "less": "^3.0.4",
     "less-loader": "^6.2.0",
     "vue-cli-plugin-element": "^1.0.1",
+    "vue-markdown-loader": "^2.4.1",
     "vue-template-compiler": "^2.6.11"
   }
 }
